--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -7,7 +7,7 @@
   "simulation": {
     "initial_sims": 10,
     "fps": 60,
-    "enable_talking": true,
+    "enable_talking": false,
     "weather_transition_time": 15.0
   },
   "weather": {
