--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -11,6 +11,9 @@
     "weather_transition_time": 15.0,
     "ignore_interaction_time": 5.0
   },
+  "movement": {
+    "direction_change_frequency": 5.0
+  },
   "weather": {
     "enable_weather_changes": false
   }
