--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -7,7 +7,7 @@
   "simulation": {
     "initial_sims": 10,
     "fps": 60,
-    "enable_talking": false,
+    "enable_talking": true,
     "weather_transition_time": 15.0,
     "ignore_interaction_time": 5.0
   },
