--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -12,7 +12,8 @@
     "fps": 60,
     "enable_talking": true,
     "weather_transition_time": 15.0,
-    "ignore_interaction_time": 15.0
+    "ignore_interaction_time": 15.0,
+    "bubble_display_time_seconds": 5.0
   },
   "movement": {
     "direction_change_frequency": 5.0
