Refactor, fix movement, make one talk at a time

--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -8,9 +8,9 @@
     "conversation_response_timeout": 30.0
   },
   "simulation": {
-    "initial_sims": 5,
+    "initial_sims": 12,
     "fps": 60,
-    "enable_talking": true,
+    "enable_talking": false,
     "weather_transition_time": 15.0,
     "ignore_interaction_time": 15.0,
     "bubble_display_time_seconds": 5.0
