Remove unneeded file

--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -42,6 +42,7 @@
   },
   "city": {
     "grid_color": [40, 40, 40],
-    "tileset_path": "aisim/src/graphics/v3"
+    "tileset_path": "aisim/src/graphics/v3",
+    "tile_size": 32
   }
 }
