Implement collision detection

--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -57,6 +57,7 @@
   "city": {
     "grid_color": [40, 40, 40],
     "tileset_path": "aisim/src/graphics/v3",
-    "tile_size": 32
+    "tile_size": 32,
+    "debug_border": true
   }
 }
