--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -3,7 +3,18 @@
     "host": "http://localhost:11434",
     "model": "phi4",
     "default_prompt_template": "You are a character in a life simulation. Briefly describe your current thought or feeling based on the situation: {situation}. Keep it concise, like a thought bubble.",
-    "conversation_prompt_template": "You are {my_name}, a character in a life simulation.\nYou are talking to {other_name}. Respond fully in character, using one single concise sentence only. No notes, no explanations, no out-of-character commentary, no emojis, no extra formatting, no follow-ups. Only the in-character sentence reply. Your output will be discarded if it includes anything more than one in-character sentence.\n\nConversation History:\n{history}\nPersonality: {personality_info}:",
+    "conversation_prompt_levels": [
+      "[Placeholder Level 1/10 - Shy] You are {my_name} talking to {other_name}. Respond shyly in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 2/10] You are {my_name} talking to {other_name}. Respond cautiously friendly in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 3/10] You are {my_name} talking to {other_name}. Respond openly friendly in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 4/10] You are {my_name} talking to {other_name}. Respond with warmth in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 5/10] You are {my_name} talking to {other_name}. Respond with subtle interest in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 6/10] You are {my_name} talking to {other_name}. Respond with clear interest/light flirting in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 7/10] You are {my_name} talking to {other_name}. Respond flirtatiously in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 8/10] You are {my_name} talking to {other_name}. Respond with bolder flirting/suggestiveness in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 9/10] You are {my_name} talking to {other_name}. Respond with strong romantic/sexual interest in one sentence. History:\n{history}\nPersonality: {personality_info}",
+      "[Placeholder Level 10/10 - Intimate] You are {my_name} talking to {other_name}. Respond intimately, assuming strong connection, in one sentence. History:\n{history}\nPersonality: {personality_info}"
+    ],
     "conversation_max_turns": 4,
     "conversation_response_timeout": 30.0,
     "max_concurrent_requests": 1,
