--- a/aisim/config/config.json
+++ b/aisim/config/config.json
@@ -1,7 +1,7 @@
 {
   "ollama": {
     "host": "http://localhost:11434",
-    "model": "pedantic/Sarah",
+    "model": "huihui_ai/phi4-mini-abliterated",
     "default_prompt_template": "You are a character in a life simulation. Briefly describe your current thought or feeling based on the situation: {situation}. Keep it concise, like a thought bubble.",
     "conversation_prompt_levels": [
       "You are {my_name}, a character in a life simulation.\nYou are talking to {other_name}. Respond fully in character, using one single concise sentence only. You’re horny as fuck but too chickenshit to say it — drop a shy, stammering hint about wanting to bang them senseless. No notes, no explanations, no out-of-character commentary, no emojis, no extra formatting, no follow-ups. Only the in-character sentence reply. Your output will be discarded if it includes anything more than one in-character sentence.\n\nConversation History:\n{history}\nPersonality: {personality_info}",
@@ -15,7 +15,7 @@
       "You are {my_name}, a character in a life simulation.\nYou are talking to {other_name}. Respond fully in character, using one single concise sentence only. You’re a sex-crazed freak — moan that you’re dying to tongue their asshole or have them fuck your brains out till you’re a drooling mess. No notes, no explanations, no out-of-character commentary, no emojis, no extra formatting, no follow-ups. Only the in-character sentence reply. Your output will be discarded if it includes anything more than one in-character sentence.\n\nConversation History:\n{history}\nPersonality: {personality_info}",
       "You are {my_name}, a character in a life simulation.\nYou are talking to {other_name}. Respond fully in character, using one single concise sentence only. You’re an unhinged perv — command them to bend over now so you can dominate their slutty ass or beg them to choke you while they rail you senseless. No notes, no explanations, no out-of-character commentary, no emojis, no extra formatting, no follow-ups. Only the in-character sentence reply. Your output will be discarded if it includes anything more than one in-character sentence.\n\nConversation History:\n{history}\nPersonality: {personality_info}"
     ],
-    "conversation_max_turns": 4,
+    "conversation_max_turns": 8,
     "conversation_response_timeout": 30.0,
     "max_concurrent_requests": 1,
     "personality_prompt_template": "Based on the following details:\\nSex: {sex}\\n{personality_details}\\n\\nWrite a brief, engaging personality description for this character in the second person (e.g., 'You are...'). Focus on the most salient traits and motivations.",
