Removes hardcoded Python path in launch configuration
Simplifies the launch configuration by removing the hardcoded Python path, ensuring better portability across environments. The working directory remains set to the workspace folder.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,8 +14,7 @@
             "module": "aisim.src.main",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "cwd": "${workspaceFolder}",
-            "python": "/opt/homebrew/Caskroom/miniconda/base/envs/aisim/bin/python" // Replace with your actual conda env path
+            "cwd": "${workspaceFolder}"
 
         }
     ]
