--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # Created by venv; see https://docs.python.org/3/library/venv.html
-bin
-include
-lib
-logs
-/personalities
-share
 pyvenv.cfg
+venv
+aisim/logs
+aisim/personalities
