Refactors asset management and map generation
Replaces tileset loading with a centralized sprite definition system using JSON for improved flexibility and layered rendering. Updates map generation to leverage configurable sprites and enhances logic for diverse tile placement. Adjusts drawing to support layering and fallback handling for missing assets.

Updates documentation to reflect the new sprite-based system and map generation process.

Relates to improving visual customization and modularity.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
             "module": "aisim.src.main",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "python": "/opt/homebrew/Caskroom/miniconda/base/envs/aisim/bin/python" // Replace with your actual conda env path
 
         }
     ]
